[build-system]
requires = ["setuptools", "setuptools-scm"]
#build-backend = "setuptools.build_meta"


[tool.setuptools]
packages = ["unipip"]


[project]
name = "unipip"
authors = [
    {name = "Hannes"},
]
description = "a PIP wrapper to install PyPI packages from inside Python"
readme = "README.md"
requires-python = ">=3.4"
keywords = ["manager", "dcc", "app"]
#license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3.7",
]
#dynamic = ["dependencies"]
dependencies = ['importlib-metadata; python_version<"3.7"']
#dynamic = ["version"]
version = "0.0.1"

#[project.optional-dependencies]
#yaml = ["pyyaml"]

#[project.scripts]
#my-script = "my_package.module:function"

[project.urls]
Homepage = "https://github.com/hannesdelbeke/unipip"
Source = "https://github.com/hannesdelbeke/unipip"
